# automation-playwright

./: .gitignore  multiplication_tables.txt
.github/workflows/: docker_test.yml  generate.yml  generate2.yml  generate_file.yml  parallel  playright_new.yml  playwright.yml  python-app.yml  python-v.yml  test_lint_depoly.yml
.pytest_cache/: .gitignore
automation-playwright/: generate_result.py  pyproject.toml
automation-playwright/src/automation_playwright/pages/: CartPage.py  LoginPage.py  ProductListPage.py
automation-playwright/tests/cart/: test_add_to_cart.py
automation-playwright/tests/checkout/: test_place_order.py
automation-playwright/tests/login/: test_login.py  test_logout.py
