[tool.poetry]
name = "automation-playwright"
version = "0.1.0"
description = ""
authors = ["sanamtasildar <sanamtashildar6@gmail.com>"]
readme = "README.md"
packages = [{include = "automation_playwright", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
